# alessandrow.github.io

./: .gitignore  404.html  CNAME  README.md  config.toml  impressum_datenschutz.html  index.html  index.xml  index_en.html  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages.yml
assets/css/: styles.css
assets/js/: script.js
categories/: index.xml
content/posts/: ping.md
js/: distill.js
layouts/partials/: scripts.html
layouts/partials/distill/: d-appendix.html  footer.html  header.html
page/1/: index.html
posts/: index.xml
posts/ping/: index.html
static/js/: distill.js
tags/: index.xml
template/: template.py
template/html/: header.txt  header_en.txt  impressum_datenschutz.html  index.html  index_en.html  index_old.html
