[tool.poetry]
name = "website"
version = "0.1.0"
description = "My Website"
authors = ["Alessandro Wollek <contact@wollek.ai>"]
license = "All rights reserved"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mako = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
